Added basic sections for report structure

--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -30,5 +30,5 @@ Ce projet implémente en C++ un système complet pour le jeu Hex, conçu princip
 Hex game, C++, Object-Oriented Programming, Negamax, Transposition Table, TorchScript, SFML.
 \end{IEEEkeywords}
 
-
+\input{sections/descriptors_pairing.tex}
 \end{document}
