--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -57,6 +57,15 @@ OpenCV, ``cv::ORB Class Reference,'' \emph{OpenCV Documentation} (OpenCV 3.4), a
 \bibitem{calonder_brief}
 M. Calonder, V. Lepetit, C. Strecha, and P. Fua, ``BRIEF: Binary Robust Independent Elementary Features,'' in \emph{Proc. European Conference on Computer Vision (ECCV)}, 2010, accessed Feb. 6, 2026. [Online]. Available: \url{https://www.cs.ubc.ca/~lowe/525/papers/calonder_eccv10.pdf}
 
+\bibitem{alcantarilla_kaze}
+P. F. Alcantarilla, A. Bartoli, and A. J. Davison, ``KAZE Features,'' in \emph{Proc. European Conference on Computer Vision (ECCV)}, 2012, accessed Feb. 6, 2026. [Online]. Available: \url{https://www.doc.ic.ac.uk/~ajd/Publications/alcantarilla_etal_eccv2012.pdf}
+
+\bibitem{perona_malik_1990}
+P. Perona and J. Malik, ``Scale-space and edge detection using anisotropic diffusion,'' \emph{IEEE Transactions on Pattern Analysis and Machine Intelligence}, vol. 12, no. 7, pp. 629--639, 1990, accessed Feb. 6, 2026. [Online]. Available: https://www.sci.utah.edu/~gerig/CS7960-S2010/materials/Perona-Malik/PeronaMalik-PAMI-1990.pdf
+
+\bibitem{bay_surf_2008}
+H. Bay, A. Ess, T. Tuytelaars, and L. Van Gool, ``SURF: Speeded Up Robust Features,'' \emph{Computer Vision and Image Understanding}, vol. 110, no. 3, pp. 346--359, 2008, accessed Feb. 6, 2026. [Online]. Available: https://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Bay08.pdf
+
 \end{thebibliography}
 
 \end{document}
