--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -2,6 +2,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{graphicx}
 \usepackage{url}
 
 \begin{document}
